--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,8 @@
-
-
-Options +SymLinksIfOwnerMatch 
+<IfModule mod_rewrite.c> 
 RewriteEngine On 
-RewriteCond %{REQUEST_FILENAME} !-f 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteBase / 
+RewriteRule ^ index \ .php $ - [L] 
+RewriteCond% {REQUEST_FILENAME}! -F 
+RewriteCond% {REQUEST_FILENAME}! -D 
+RewriteRule. / index.php [L] 
+</IfModule>
