--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -3,5 +3,16 @@ location /wss {
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    index index.html index.htm index.php;
+}
+server {
+        listen   80;
+        server_name  domain.com www.domain.com;
+        access_log  /var/...........................;
+        root   /path/to/root;
+        location / {
+                index  index.php index.html index.htm;
+        }
+        location /somedir {
+               autoindex on;
+        }
 }
