--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -5,7 +5,7 @@ location /wss {
     proxy_set_header Connection "upgrade";
 }
 server {
-        location / {
+        location /wss {
                 index  index.php index.html index.htm;
         }
 }
