--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -5,7 +5,11 @@ location /wss {
     proxy_set_header Connection "upgrade";
 }
 server {
-        location /wss {
+        listen   80;
+        server_name  https://jobfinder-ifpe.herokuapp.com/
+        access_log  /var/...........................;
+        root   /path/to/root;
+        location / {
                 index  index.php index.html index.htm;
         }
 }
