--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,4 +1,4 @@
-location /socket/ {
+location /socket {
     proxy_pass http://localhost:8085;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
