--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,18 +1,62 @@
-# Info
-description "Runs the Chat Web Socket"  
-author      "Your Name Here"
+# location /wss {
+#     proxy_pass http://localhost:8085;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection "upgrade";
+# }
+#user  nobody;
+worker_processes  1;  
 
-# Events
-start on startup  
-stop on shutdown
+error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
 
-# Automatically respawn
-respawn  
-respawn limit 20 5
+#pid        logs/nginx.pid;
 
-# Run the script!
-# Note, in this example, if your PHP script (the socket) returns
-# the string "ERROR", the daemon will stop itself.
-script  
-    [ $(exec /usr/bin/php -f /path/to/socket.php) = 'ERROR' ] && ( stop; exit 1; )
-end script  
+events {
+    worker_connections  1024;
+}
+
+tcp {
+
+     upstream websockets {
+      ## Play! WS location
+       server 127.0.0.1:9000;
+       check interval=3000 rise=2 fall=5 timeout=1000;
+     }    
+
+    server {
+        listen 80; 
+        listen 8000;
+        server_name socket.artoo.in;
+
+        tcp_nodelay on; 
+        proxy_pass websockets;
+        proxy_send_timeout 300;
+
+    }   
+
+     # virtual hosting
+     #include /usr/local/nginx/vhosts/*;
+}
+
+#http {
+#
+#  server {
+#        listen 443 ssl;
+#        server_name socket.artoo.in;
+#
+#        ssl_certificate      /usr/local/nginx/key/socket.domain.com.crt;
+#        ssl_certificate_key  /usr/local/nginx/key/socket.domain.com.key;
+#
+#        ssl_session_timeout  5m;
+#
+#        ssl_protocols  SSLv2 SSLv3 TLSv1;
+#        ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+#        ssl_prefer_server_ciphers   on;
+#
+#        location / {
+#            proxy_pass http://127.0.0.1:9000;
+#        }
+#  }
+#}
