--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,59 +4,14 @@
 #     proxy_set_header Upgrade $http_upgrade;
 #     proxy_set_header Connection "upgrade";
 # }
-#user  nobody;
-worker_processes  1;  
-
-error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
-events {
-    worker_connections  1024;
+location /wss {
+    proxy_pass http://localhost:8085;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header HOST $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_pass_request_headers on;
 }
-
-tcp {
-
-     upstream websockets {
-      ## Play! WS location
-       server 127.0.0.1:9000;
-       check interval=3000 rise=2 fall=5 timeout=1000;
-     }    
-
-    server {
-        listen 80; 
-        listen 8000;
-        server_name socket.artoo.in;
-
-        tcp_nodelay on; 
-        proxy_pass websockets;
-        proxy_send_timeout 300;
-
-    }   
-
-     # virtual hosting
-     #include /usr/local/nginx/vhosts/*;
-}
-
-#http {
-#
-#  server {
-#        listen 443 ssl;
-#        server_name socket.artoo.in;
-#
-#        ssl_certificate      /usr/local/nginx/key/socket.domain.com.crt;
-#        ssl_certificate_key  /usr/local/nginx/key/socket.domain.com.key;
-#
-#        ssl_session_timeout  5m;
-#
-#        ssl_protocols  SSLv2 SSLv3 TLSv1;
-#        ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
-#        ssl_prefer_server_ciphers   on;
-#
-#        location / {
-#            proxy_pass http://127.0.0.1:9000;
-#        }
-#  }
-#}
