--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -16,4 +16,5 @@ location /ws {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://localhost:8080;
+        try_files $uri /index.html index.php;
 }
