--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "email": "jefersongomes333@hotmail.com"
         }
     ],
+    "scripts": {
+        "tests": ".\\vendor\\bin\\phpunit"
+    },
     "require": {
         "cboden/ratchet": "^0.4"
     },
