--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "tests": ".\\vendor\\bin\\phpunit"
     },
     "require": {
-        "cboden/ratchet": "^0.4"
+        "cboden/ratchet": "^0.4",
+        "pusher/pusher-php-server": "^4.1"
     },
     "autoload": {
         "psr-4": {
