--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jeferson/jobfinder",
-    "description": "Chat JOBFINDER realtime",
+    "description": "Sistema JOBFINDER",
     "authors": [
         {
             "name": "jeferson",
@@ -8,7 +8,7 @@
         }
     ],
     "scripts": {
-        "tests": ".\\vendor\\bin\\phpunit"
+        
     },
     "require": {
         "cboden/ratchet": "^0.4",
@@ -20,6 +20,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "9"
+        
     }
 }
