--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,25 @@
 {
     "name": "jeferson/jobfinder",
-    "description": "Sistema JOBFINDER",
+    "description": "Chat JOBFINDER realtime",
     "authors": [
         {
             "name": "jeferson",
             "email": "jefersongomes333@hotmail.com"
         }
     ],
+    "scripts": {
+        "tests": ".\\vendor\\bin\\phpunit"
+    },
     "require": {
-        "php": "^7.4",
+        "cboden/ratchet": "^0.4",
         "pusher/pusher-php-server": "^4.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9"
     }
 }
